# research-assistant-time-tracker

./: README.md  docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
frontend/: .gitignore  Dockerfile  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: MonthlyRecordsCalendar.css  MonthlyRecordsCalendar.tsx  RecordForm.tsx
frontend/src/types/: index.ts
frontend/src/utils/: dateUtils.ts  toCsv.ts  transformData.ts
