[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "n0-t0", email = "ray0az0may19@gmail.com" }
]
dependencies = [
    "flask>=3.0.2",
    "flask-cors>=4.0.0",
    "flask_sqlalchemy>=3.1.1",
    "waitress>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
